Fixed the marker issue on the Summary tag on Safari.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,7 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+summary::-webkit-details-marker {
+  display: none;
+}
